Fixed top menu being covered

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -101,6 +101,7 @@ td {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 100;
 }
 
 .pageTitle {
